objects/Comment__c.object
<CustomObject>
    <description>Object to store internal comments added by root store members</description>
    <fields>
        <fullName>Auditor_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Auditor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Internal Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auditor_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auditor Location</label>
        <referenceTo>Auditor_Location__c</referenceTo>
        <relationshipLabel>Internal Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auditor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Auditor</label>
        <referenceTo>Auditor__c</referenceTo>
        <relationshipLabel>Internal Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <inlineHelpText>Internal comment added by root store members</inlineHelpText>
        <label>Comment</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Comment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <recordTypes>
        <fullName>Comment_on_Auditor</fullName>
        <active>true</active>
        <description>Add internal comment for Auditor</description>
        <label>Comment on Auditor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Comment_on_Auditor_Contact</fullName>
        <active>true</active>
        <description>Add internal comment for Auditor Contact</description>
        <label>Comment on Auditor Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Comment_on_Auditor_Location</fullName>
        <active>true</active>
        <description>Add internal comment for Auditor Location</description>
        <label>Comment on Auditor Location</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>